# nnstacking2.0

./: .gitignore  Significance.ipynb  Significance.py  main.py  pyproject.toml
Implementation/: Applications.py  CV.py  Sample plots.py  Simulation_func.py  Simulation_term.py  Weights.py
Package/: __init__.py  linear_stack.py
Results/Blog/: Remove_linear.txt  Significance_MAE  Significance_MSE
Results/Blog/Fitted/: NNMETA_Weights  NN_Weights
Results/GPU/: Full_fit.txt
Results/GPU/Fitted/: NNMETA_Weights
Results/Superconductivity/: Full_fit.txt  Remove_linear.txt
Results/Superconductivity/Fitted/: NNMETA_Weights
Results/Year/: Full_fit.txt  Significance_MSE
Results/Year/Fitted/: NN_Weights
experiments/Implementation/: Applications_beckend.py  Example.py  Significance tests.py  Weights.py  results.py
experiments/Results/Blog/: Full_fit.txt
experiments/Results/CV/: results.txt
experiments/Results/GPU/: Remove_linear.txt  Significance_MAE  Significance_MSE
experiments/Results/GPU/Fitted/: NN_Weights
experiments/Results/Superconductivity/: Significance_MAE  Significance_MSE
experiments/Results/Superconductivity/Fitted/: NN_Weights
experiments/Results/Year/: Remove_linear.txt  Significance_MAE
experiments/Results/Year/Fitted/: NNMETA_Weights
nnstacking/: linear_stack.py  nnpredict.py  nns.py  radam.py
tests/: generate_data.py  paper_example.py  test_package.py
